# obsmon-tools

./: README.md  poetry.toml  pyproject.toml
obsmontools/: cli.py  obsmon.py  odb.py
obsmontools/data/: obsmon_config.json  odb_config.json  run_settings.json
tests/smoke/: test_odb2sqlite.py
