[project]
  name = "obsmontools"
  version = "0.0.1"
  description = "Tools to obsmon"
  authors = [{name = "Trygve Aspelien"}]
  license = "MIT"
  dependencies = [
    "pyodc"
  ]

[tool.poetry.dependencies]
  python = ">=3.10,<4.0"

[project.scripts]
  odb2sqlite = "obsmontools.cli:odb2sqlite"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
